--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "description": "[![Build status]()",
-  "homepage": "https://github.com/oksana-danilova/ra-hw-store-func#readme",
+  "homepage": "https://oksana-danulova.github.io/ra-hw-store-func/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/oksana-danilova/ra-hw-store-func/issues"
+    "url": "git+ssh://git@github.com/oksana-danilova/ra-hw-store-func.git"
   },
   "license": "ISC",
   "author": "oksana-danilova",
@@ -31,6 +31,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
   }
